[package]
name = "reifydb-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core database interfaces and data structures for ReifyDB"

[features]
default = []

[build-dependencies]
reifydb-build = { workspace = true }

[dependencies]
dashmap = { workspace = true }
reifydb-runtime = { workspace = true }
reifydb-type = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
crossbeam-skiplist = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
uuid = { workspace = true }
num-bigint = { workspace = true }
bigdecimal = { workspace = true }
num-traits = { workspace = true }
indexmap = { workspace = true }
num_cpus = { workspace = true }
paste = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-util = { workspace = true }

[dev-dependencies]
reifydb-catalog = { workspace = true }
reifydb-engine = { workspace = true, features = ["tokio"] }
reifydb-transaction = { workspace = true }
