[package]
name = "reifydb-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core database interfaces and data structures for ReifyDB"

[features]
default = []

[build-dependencies]
reifydb-build = { workspace = true }

[dependencies]
reifydb-abi = { workspace = true }
reifydb-runtime = { workspace = true }
reifydb-codec = { workspace = true }
reifydb-value = { workspace = true }
thiserror = { workspace = true }
crossbeam-skiplist = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
uuid = { workspace = true }
num-bigint = { workspace = true }
bigdecimal = { workspace = true }
num-traits = { workspace = true }
indexmap = { workspace = true }
paste = { workspace = true }
smallvec = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[dev-dependencies]
reifydb-engine = { workspace = true, features = ["tokio"] }
postcard = { workspace = true }
