[package]
name = "reifydb-engine"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Query execution and processing engine for ReifyDB"

[features]
default = ["tokio"]
tokio = [
	"reifydb-auth/native",
	"reifydb-cdc/native",
	"reifydb-catalog/native",
	"reifydb-core/native",
	"reifydb-function/native",
	"reifydb-hash/native",
	"reifydb-metric/native",
	"reifydb-rql/native",
	"reifydb-rqlv2/native",
	"reifydb-runtime/native",
	"reifydb-store-multi/native",
	"reifydb-store-multi/sqlite",
	"reifydb-store-single/native",
	"reifydb-store-single/sqlite",
	"reifydb-transaction/native",
	"reifydb-type/native",
	"reifydb-vm/native",
	"futures-util"
]
wasm = [
	"reifydb-auth/wasm",
	"reifydb-cdc/wasm",
	"reifydb-catalog/wasm",
	"reifydb-core/wasm",
	"reifydb-function/wasm",
	"reifydb-hash/wasm",
	"reifydb-metric/wasm",
	"reifydb-rql/wasm",
	"reifydb-rqlv2/wasm",
	"reifydb-runtime/wasm",
	"reifydb-store-multi/wasm",
	"reifydb-store-single/wasm",
	"reifydb-transaction/wasm",
	"reifydb-type/wasm",
	"reifydb-vm/wasm"
]

[dependencies]
reifydb-auth = { workspace = true }
reifydb-cdc = { workspace = true }
reifydb-function = { workspace = true }
reifydb-catalog = { workspace = true }
reifydb-core = { workspace = true }
reifydb-abi = { workspace = true }
reifydb-hash = { workspace = true }
reifydb-metric = { workspace = true }
reifydb-runtime = { workspace = true }
reifydb-rql = { workspace = true }
reifydb-rqlv2 = { workspace = true }
reifydb-store-multi = { workspace = true }
reifydb-store-single = { workspace = true }
reifydb-transaction = { workspace = true }
reifydb-type = { workspace = true }
reifydb-vm = { workspace = true }

tracing = { workspace = true }
postcard = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true, optional = true }
indexmap = { workspace = true }
bumpalo = { workspace = true }
