[package]
name = "reifydb-engine"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Query execution and processing engine for ReifyDB"

[features]
default = ["tokio", "sqlite"]
tokio = []
sqlite = ["reifydb-store-multi/sqlite", "reifydb-store-single/sqlite"]

[build-dependencies]
reifydb-build = { workspace = true }

[dependencies]
reifydb-auth = { workspace = true }
reifydb-cdc = { workspace = true }
reifydb-function = { workspace = true }
reifydb-catalog = { workspace = true }
reifydb-core = { workspace = true }
reifydb-abi = { workspace = true }
reifydb-metric = { workspace = true }
reifydb-runtime = { workspace = true }
reifydb-rql = { workspace = true }
reifydb-rqlv2 = { workspace = true }
reifydb-store-multi = { workspace = true }
reifydb-store-single = { workspace = true }
reifydb-transaction = { workspace = true }
reifydb-type = { workspace = true }
reifydb-vm = { workspace = true }

tracing = { workspace = true }
postcard = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
bumpalo = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-util = { workspace = true }
