[package]
name = "reifydb-engine"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Query execution and processing engine for ReifyDB"

[features]
default = ["tokio", "sqlite"]
tokio = []
sqlite = ["reifydb-store-multi/sqlite", "reifydb-store-single/sqlite"]

[build-dependencies]
reifydb-build = { workspace = true }

[dependencies]
reifydb-auth = { workspace = true }
reifydb-cdc = { workspace = true }
reifydb-routine = { workspace = true }
reifydb-catalog = { workspace = true }
reifydb-core = { workspace = true }
reifydb-extension = { workspace = true }
reifydb-metric = { workspace = true }
reifydb-policy = { workspace = true }
reifydb-runtime = { workspace = true }
reifydb-rql = { workspace = true }
reifydb-store-multi = { workspace = true }
reifydb-store-single = { workspace = true }
reifydb-transaction = { workspace = true }
reifydb-type = { workspace = true }
thiserror = { workspace = true }
bumpalo = { workspace = true }
tracing = { workspace = true }
postcard = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-util = { workspace = true }
reifydb-client = { workspace = true, features = ["grpc"] }
