[package]
name = "reifydb-flow-operator-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reifydb-flow-operator-abi = { path = "../flow-operator-abi" }
reifydb-core = { path = "../core" }
reifydb-type = { path = "../type" }

# Serialization
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true, features = ["serde"] }

[dev-dependencies]
