[package]
name = "reifydb-function"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Function interfaces for ReifyDB"

[features]
default = ["native"]
native = [
    "reifydb-catalog/native",
    "reifydb-core/native",
    "reifydb-rql/native",
    "reifydb-transaction/native",
    "reifydb-type/native",
]
wasm = [
    "reifydb-catalog/wasm",
    "reifydb-core/wasm",
    "reifydb-rql/wasm",
    "reifydb-transaction/wasm",
    "reifydb-type/wasm",
]

[dependencies]
reifydb-catalog = { workspace = true }
reifydb-core = { workspace = true }
reifydb-rql = { workspace = true }
reifydb-transaction = { workspace = true }
reifydb-type = { workspace = true }

futures-util = { workspace = true }
indexmap = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = {workspace = true}