[package]
name = "reifydb-function"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Function interfaces for ReifyDB"

[features]
default = []

[dependencies]
reifydb-catalog = { workspace = true }
reifydb-core = { workspace = true }
reifydb-rql = { workspace = true }
reifydb-transaction = { workspace = true }
reifydb-type = { workspace = true }

futures-util = { workspace = true }
indexmap = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = {workspace = true}
