[package]
name = "reifydb-hash"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description = "Hash function implementations for ReifyDB"

[dependencies]
serde = { workspace = true }

[build-dependencies]
cc = "1.2.34"
