[package]
name = "reifydb-hash"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description = "Hash function implementations for ReifyDB"

[features]
default = ["native"]
native = []  # Use C implementations via FFI
wasm = ["xxhash-rust", "sha1"]  # Use pure Rust implementations for WASM

[dependencies]
serde = { workspace = true }

# WASM-only dependencies (pure Rust implementations)
xxhash-rust = { version = "0.8", optional = true, features = ["xxh32", "xxh64", "xxh3"] }
sha1 = { version = "0.10", optional = true }

[build-dependencies]
cc = "1.2.34"
