[package]
name = "reifydb-macro-impl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "Implementation for ReifyDB derive macros. Not for direct use - use reifydb-macro, reifydb-derive, or reifydb-client-derive instead."

[dependencies]
proc-macro2 = { workspace = true }
