[package]
name = "reifydb-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-or-later"
repository.workspace = true
description = "Macros for ReifyDB"

[lib]
proc-macro = true

[dependencies]
reifydb-macro-impl = { workspace = true }

[dev-dependencies]
reifydb-runtime = { workspace = true }
reifydb-type = { workspace = true }
