[package]
name = "reifydb-metric"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage and CDC metrics tracking for ReifyDB"

[features]
default = ["native"]
native = ["reifydb-core/native", "reifydb-type/native"]
wasm = ["reifydb-core/wasm", "reifydb-type/wasm"]

[dependencies]
reifydb-core = { workspace = true }
reifydb-type = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
reifydb-store-single = { workspace = true, features = ["native", "sqlite"] }
reifydb-store-multi = { workspace = true, features = ["native", "sqlite"] }
reifydb-testing = { workspace = true }
test_each_file = { workspace = true }
