[package]
name = "reifydb-metric"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage and CDC metrics tracking for ReifyDB"

[features]
default = []

[dependencies]
reifydb-core = { workspace = true }
reifydb-type = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
reifydb-store-single = { workspace = true, features = ["sqlite"] }
reifydb-store-multi = { workspace = true, features = ["sqlite"] }
reifydb-testing = { workspace = true }
test_each_file = { workspace = true }
