[package]
name = "reifydb-metric"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Observability primitives for ReifyDB — counters, gauges, histograms, and query statement accumulators"

[dependencies]
reifydb-core = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
reifydb-runtime = { workspace = true }
