[package]
name = "reifydb-metrics"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Observability primitives for ReifyDB — counters, gauges, histograms, and query statement accumulators"

[build-dependencies]
reifydb-build = { workspace = true }

[dependencies]
reifydb-codec = { workspace = true }
reifydb-core = { workspace = true }
reifydb-runtime = { workspace = true }
reifydb-value = { workspace = true }
dashmap = { workspace = true }
