[package]
name = "reifydb-network"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
websocket = ["dep:prost", "dep:tokio", "dep:tokio-stream", "dep:tonic"]
grpc = ["dep:prost", "dep:tokio", "dep:tokio-stream", "dep:tonic"]

[dependencies]
reifydb-catalog = { workspace = true }
reifydb-core = { workspace = true }
reifydb-engine = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tokio = { workspace = true, features = ["macros", "rt-multi-thread"], optional = true }
tokio-stream = { workspace = true, optional = true }


# grpc
prost = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }


[dev-dependencies]
reifydb-testing = { workspace = true }
test_each_file = { workspace = true }

[build-dependencies]
# grpc
tonic-build = { workspace = true }