[package]
name = "reifydb-network"
version = "0.0.1"
edition = "2024"
license = "AGPL-3"
authors = ["Dominique Chuo <dominique@reifydb.com>"]
description = "Network protocol handling for HTTP and WebSocket in ReifyDB"

[dependencies]
reifydb-core = { workspace = true }
reifydb-type = { workspace = true }
reifydb-hash = { workspace = true }

httparse = { workspace = true }
mio = { workspace = true }