[package]
name = "reifydb-network"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Network protocol handling for HTTP and WebSocket in ReifyDB"

[dependencies]
reifydb-core = { workspace = true }
reifydb-type = { workspace = true }
reifydb-hash = { workspace = true }

httparse = { workspace = true }
mio = { workspace = true }