[package]
name = "reifydb-operator-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
reifydb-operator-api = { path = "../operator-api" }
reifydb-core = { path = "../core" }
reifydb-type = { path = "../type" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }

[dev-dependencies]

[lib]
name = "reifydb_operator_sdk"
path = "src/lib.rs"

[[example]]
name = "passthrough"
path = "examples/passthrough.rs"

[[example]]
name = "filter"
path = "examples/filter.rs"

[[example]]
name = "word_count"
path = "examples/word_count.rs"