[package]
name = "reifydb-operator-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reifydb-operator-abi = { path = "../operator-abi" }
reifydb-core = { path = "../core" }
reifydb-type = { path = "../type" }

# Serialization
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true, features = ["serde"] }

[dev-dependencies]

[lib]
name = "reifydb_operator_sdk"
path = "src/lib.rs"