[package]
name = "reifydb_persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reifydb_core = { workspace = true }
heed = { workspace = true }
regex = "1.11.1"

[dev-dependencies]
reifydb_testing = { workspace = true }
test_each_file = { workspace = true }
