[package]
name = "reifydb-catalog"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reifydb-core = { workspace = true }
reifydb-storage = { workspace = true }
reifydb-transaction = { workspace = true }

crossbeam-skiplist = {workspace = true}
once_cell = {workspace = true}
serde = { workspace = true }

[dev-dependencies]
reifydb-engine = { workspace = true}